@@ -34,79 +34,79 @@ import org.dyn4j.geometry.MassType;
 
 public class UnmovableBody implements io.github.ericmedvet.mrsim2d.core.bodies.UnmovableBody, MultipartBody {
 
-    private final Poly poly;
-    private final List<Body> bodies;
-    private final List<Anchor> anchors;
+  private final Poly poly;
+  private final List<Body> bodies;
+  private final List<Anchor> anchors;
 
-    private final Point initialCenter;
+  private final Point initialCenter;
 
-    public UnmovableBody(
-            Poly poly, double anchorsDensity, double friction, double restitution, double anchorSideDistance) {
-        this.poly = poly;
-        List<Poly> parts = (poly.vertexes().length > 3) ? Utils.decompose(poly) : List.of(poly);
-        List<Pair<Body, Poly>> bodyPairs = parts.stream()
-                .map(c -> {
-                    Convex convex = Utils.poly(c);
-                    Body body = new Body();
-                    body.addFixture(convex, 1d, friction, restitution);
-                    body.setMass(MassType.INFINITE);
-                    return new Pair<>(body, c);
-                })
-                .toList();
-        bodies = bodyPairs.stream().map(Pair::first).toList();
-        initialCenter = center(bodies);
-        bodies.forEach(b -> b.setUserData(this));
-        if (Double.isFinite(anchorsDensity)) {
-            List<Anchor> localAnchors = new ArrayList<>();
-            for (Segment segment : poly.sides()) {
-                double nOfAnchors = Math.max(Math.floor(segment.length() * anchorsDensity), 2);
-                for (double i = 0; i < nOfAnchors; i = i + 1) {
-                    Point sidePoint = segment.pointAtRate((i + 1d) / (nOfAnchors + 1d));
-                    Point aP = sidePoint.sum(new Point(segment.direction() + Math.PI / 2d).scale(anchorSideDistance));
-                    Body closest = bodies.stream()
-                            .min(Comparator.comparingDouble(
-                                    b -> Utils.point(b.getLocalCenter()).distance(aP)))
-                            .orElseThrow();
-                    localAnchors.add(new BodyAnchor(closest, aP, this));
-                }
-            }
-            anchors = Collections.unmodifiableList(localAnchors);
-        } else {
-            anchors = List.of();
+  public UnmovableBody(
+      Poly poly, double anchorsDensity, double friction, double restitution, double anchorSideDistance) {
+    this.poly = poly;
+    List<Poly> parts = (poly.vertexes().length > 3) ? Utils.decompose(poly) : List.of(poly);
+    List<Pair<Body, Poly>> bodyPairs = parts.stream()
+        .map(c -> {
+          Convex convex = Utils.poly(c);
+          Body body = new Body();
+          body.addFixture(convex, 1d, friction, restitution);
+          body.setMass(MassType.INFINITE);
+          return new Pair<>(body, c);
+        })
+        .toList();
+    bodies = bodyPairs.stream().map(Pair::first).toList();
+    initialCenter = center(bodies);
+    bodies.forEach(b -> b.setUserData(this));
+    if (Double.isFinite(anchorsDensity)) {
+      List<Anchor> localAnchors = new ArrayList<>();
+      for (Segment segment : poly.sides()) {
+        double nOfAnchors = Math.max(Math.floor(segment.length() * anchorsDensity), 2);
+        for (double i = 0; i < nOfAnchors; i = i + 1) {
+          Point sidePoint = segment.pointAtRate((i + 1d) / (nOfAnchors + 1d));
+          Point aP = sidePoint.sum(new Point(segment.direction() + Math.PI / 2d).scale(anchorSideDistance));
+          Body closest = bodies.stream()
+              .min(Comparator.comparingDouble(
+                  b -> Utils.point(b.getLocalCenter()).distance(aP)))
+              .orElseThrow();
+          localAnchors.add(new BodyAnchor(closest, aP, this));
         }
+      }
+      anchors = Collections.unmodifiableList(localAnchors);
+    } else {
+      anchors = List.of();
     }
+  }
 
-    private static Point center(List<Body> bodies) {
-        return Point.average(bodies.stream()
-                .map(AbstractPhysicsBody::getWorldCenter)
-                .map(Utils::point)
-                .toArray(Point[]::new));
-    }
+  private static Point center(List<Body> bodies) {
+    return Point.average(bodies.stream()
+        .map(AbstractPhysicsBody::getWorldCenter)
+        .map(Utils::point)
+        .toArray(Point[]::new));
+  }
 
-    @Override
-    public List<Anchor> anchors() {
-        return anchors;
-    }
+  @Override
+  public List<Anchor> anchors() {
+    return anchors;
+  }
 
-    @Override
-    public Collection<Body> getBodies() {
-        return bodies;
-    }
+  @Override
+  public Collection<Body> getBodies() {
+    return bodies;
+  }
 
-    @Override
-    public Collection<Joint<Body>> getJoints() {
-        return List.of();
-    }
+  @Override
+  public Collection<Joint<Body>> getJoints() {
+    return List.of();
+  }
 
-    @Override
-    public Poly poly() {
-        // assuming it can only be translated, we just check diff wrt initial center
-        Point t = center(bodies).diff(initialCenter);
-        return new Poly(Arrays.stream(poly.vertexes()).map(p -> p.sum(t)).toArray(Point[]::new));
-    }
+  @Override
+  public Poly poly() {
+    // assuming it can only be translated, we just check diff wrt initial center
+    Point t = center(bodies).diff(initialCenter);
+    return new Poly(Arrays.stream(poly.vertexes()).map(p -> p.sum(t)).toArray(Point[]::new));
+  }
 
-    @Override
-    public String toString() {
-        return String.format("%s at %s", this.getClass().getSimpleName(), poly().center());
-    }
+  @Override
+  public String toString() {
+    return String.format("%s at %s", this.getClass().getSimpleName(), poly().center());
+  }
 }
